# wc-cpp

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  build.sh  ccwc.cpp  test.sh
cmake/: GtestSetup.cmake
docs/: DEV.md
include/: ccwc.hpp
src/: ccwc.cpp  main.cpp
test/: CMakeLists.txt  test.cpp
test/inputs/: test1..txt  test2.txt
tests/: CMakeLists.txt  test.cpp
tests/inputs/: test1_unicode.txt
